--- a/css/styles.css
+++ b/css/styles.css
@@ -5,15 +5,14 @@ body {
 }
 .left {
     /* padding: 3%; */
-    /* border: 1px solid; */
     background-color: aliceblue;
     margin-bottom: 3% ;
     height: auto;
 }
 
 .profile_pic {
-    width: 30%;
-    /* border-radius: 100%; */
+    width: 40%;
+    border-radius: 100%;
     margin-top: 10%;
 }
 
@@ -34,6 +33,8 @@ h3 {
 
 .email-button {
     margin: 3%;
+
+    padding: 2% 5% 2% 5%;
 }
 
 .social_icons {
@@ -49,5 +50,24 @@ h3 {
 }
 
 .about_details {
-    text-align: left;
+    margin-bottom: 50%;
+    font-size: 2rem;
+    
+}
+
+p{
+    font-size: 1.3rem;
+}
+.right {
+    padding: 5% 5%;
+    text-align: justify;
+}
+
+.buttons {
+    margin-top: 6%;
+}
+
+.right_button {
+    padding: 2% 5% 2% 5%;
+    margin: 10%;
 }
